# seed-salesforce

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  README.md  pyproject.toml  ruff.toml  salesforce-config-example.json  seed-config-example.json  setup.cfg  tox.ini
.github/workflows/: ci.yml
examples/: sync_seed.py
seed_salesforce/: salesforce_client.py  seed_salesforce.py  sync_seed.py
seed_salesforce/default_mappings/: oep-seed-salesforce-benchmarking.json.template  property-complied.json.template  property-isinviolation.json.template  seed-salesforce-benchmarking.json.template
tests/: conftest.py  test_salesforce_client.py  test_salesforce_connection.py  test_seed_integration.py
tests/data/: test-seed-data-mappings.csv  test-seed-data.xlsx
tests/integration/: docker-compose.yml
