[tool.poetry]
name = "seed-salesforce"
version = "0.1.2"
description = "Package for connecting SEED data to Salesforce"
authors = ["Nicholas Long <nicholas.long@nrel.gov>", "Katherine Fleming <katherine.fleming@nrel.gov>"]
license = "BSD-3-Clause"

readme = ["README.md", "LICENSE.md"]

homepage = "https://seed-platform.org"
repository = "https://github.com/seed-platform/seed-salesforce"
documentation = "https://seed-platform.org"
keywords = ["SEED Platform", "Building Benchmarking", "Salesforce", "Building Performance Standard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
packages = [
    { include = "seed_salesforce" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
python-dateutil = "*"
simple-salesforce = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0, <5.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "-s"
]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
