# content of pytest.ini or tox.ini
# setup.cfg files should use [tool:pytest] section instead
[metadata]
description-file = README.md

[tool:pytest]
addopts =
    # --cov seed_salesforce --cov-report term-missing
    --verbose
    -s
norecursedirs =
    dist
    build
    modelica-buildings
    .tox
    src
    output
testpaths = tests

# Add markers as needed
# markers =
    # simulation: marks tests that run a simulation with docker/jmodelica (deselect with '-m "not simulation"'). All simulations now require MSL v4.

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
;ignore = E501
exclude =
    .tox
    .eggs
    build
    dist
    docs/conf.py

[build_sphinx]
source_dir = docs
build_dir = docs/_build
